[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/TouchGamepad.gd" type="Script" id=1]
[ext_resource path="res://assets/button_arrow.png" type="Texture" id=2]
[ext_resource path="res://assets/button_shoot.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 65.0

[node name="TouchGamepad" type="Node2D"]
script = ExtResource( 1 )

[node name="Thrust" type="TouchScreenButton" parent="."]
position = Vector2( 32, 692 )
normal = ExtResource( 2 )
pressed = ExtResource( 2 )
shape = SubResource( 1 )
shape_visible = false
visibility_mode = 1

[node name="Shoot" type="TouchScreenButton" parent="."]
position = Vector2( 1757, 692 )
normal = ExtResource( 3 )
pressed = ExtResource( 3 )
shape = SubResource( 1 )
shape_visible = false
visibility_mode = 1

[node name="Left" type="TouchScreenButton" parent="."]
position = Vector2( 32, 980 )
rotation = 4.71239
normal = ExtResource( 2 )
pressed = ExtResource( 2 )
shape = SubResource( 1 )
shape_visible = false
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2( 1885, 852 )
rotation = 1.5708
normal = ExtResource( 2 )
pressed = ExtResource( 2 )
shape = SubResource( 1 )
shape_visible = false
visibility_mode = 1

[connection signal="pressed" from="Thrust" to="." method="_on_Thrust_pressed"]
[connection signal="released" from="Thrust" to="." method="_on_Thrust_released"]
[connection signal="pressed" from="Shoot" to="." method="_on_Shoot_pressed"]
[connection signal="released" from="Shoot" to="." method="_on_Shoot_released"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="released" from="Left" to="." method="_on_Left_released"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="released" from="Right" to="." method="_on_Right_released"]
